# nova

./: .gitignore  AGENTS.md  README.md  nova-implementation-plan.md  package-lock.json  package.json
.agents/skills/task-starter/: SKILL.md
.agents/skills/task-starter/agents/: openai.yaml
scripts/: build-portable-windows.ps1
src/: app.js  index.html  input.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  download.rs  error.rs  extract.rs  jdk.rs  lib.rs  maven.rs  setup.rs  symlink.rs  version.rs
src-tauri/src/provider/: adoptium.rs  corretto.rs  mod.rs  tsinghua.rs  zulu.rs
