[package]
name = "nova"
version = "0.1.0"
description = "A development environment manager with Tauri GUI"
authors = ["nova"]
edition = "2021"

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
zip = "2"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }
